--- a/style.css
+++ b/style.css
@@ -2,9 +2,15 @@ body {
     background-color: lavender;
 }
 
+#calculator {
+    border: 1px solid black;
+    width: 450px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
 
 #display {
-    width: 450px;
+    width: 100%;
     height: 30px;
 }
 
