--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap');
+
+html, body {
+    margin: 0;
+    height: 100%;
+    font-family: 'Orbitron', sans-serif;
+}
+
 body {
     background-color: lavender;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 #calculator {
@@ -7,16 +20,21 @@ body {
     width: 450px;
     padding-left: 5px;
     padding-right: 5px;
-    margin: auto;
 }
 
 #display {
     width: 100%;
     height: 30px;
+    border: 1px solid blue;
 }
 
 #buttons {
     width: 450px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+button {
+    font-family: inherit;
+    font-size: 1em;
 }
