--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html, body {
     margin: 0;
     height: 100%;
     font-family: 'Orbitron', sans-serif;
+    font-size: 1.2em;
 }
 
 body {
@@ -17,7 +18,7 @@ body {
 
 #calculator {
     border: 1px solid black;
-    width: 450px;
+    /* width: 450px; */
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -29,12 +30,16 @@ body {
 }
 
 #buttons {
-    width: 450px;
+    width: inherit;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 10px;
+    row-gap: 8px;
 }
 
 button {
     font-family: inherit;
     font-size: 1em;
+    width: 81px;
+    height: 68px;
 }
