--- a/style.css
+++ b/style.css
@@ -24,9 +24,15 @@ body {
 }
 
 #display {
-    width: 100%;
-    height: 30px;
+    /* width: 100%; */
+    max-width: 351px;
+    height: 68px;
     border: 1px solid blue;
+    margin: 10px auto;
+    text-align: right;
+    vertical-align: middle;
+    line-height: 68px; /*center the text horizontally */
+    font-size: 1.5em;
 }
 
 #buttons {
