--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap');
+/* @import url("https://fonts.google.com/icons?selected=Material%20Icons%20Outlined%3Abackspace%3A"); */
 
 html, body {
     margin: 0;
@@ -55,4 +56,13 @@ button {
     background-color: #ffefd0fd;
     border: 3px solid black;
     border-radius: 10%;
+}
+
+.non-operator {
+    background-color: lightcoral;
+}
+
+#backspace > i {
+    font-size: 1.4em;
+    line-height: 60px;
 }
