--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 8px;
+    box-shadow: inset 2px 1px black;
 }
 
 #buttons {
