--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    flex-direction: column;
 }
 
 #calculator {
@@ -88,4 +88,9 @@ button:active {
     33% {color:rgb(68, 161, 238); }
     66% {color:rgb(255, 106, 106); }
     100% {color:rgb(164, 255, 161); }
+}
+
+footer {
+    font-size: initial;
+    margin-top: 10px;
 }
